--- a/templates/staff/uploadNote.html
+++ b/templates/staff/uploadNote.html
@@ -77,6 +77,12 @@
                       {% for stud in student %}
                       <option value="{{ stud.admin.first_name }} {{stud.admin.last_name }}">{{ stud.admin.first_name }} {{stud.admin.last_name }}</option>
                       {% endfor %}
+                      {% for stud2 in student2 %}
+                      <option value="{{ stud2.admin.first_name }} {{stud2.admin.last_name }}">{{ stud2.admin.first_name }} {{stud2.admin.last_name }}</option>
+                      {% endfor %}
+                      {% for stud3 in student3 %}
+                      <option value="{{ stud3.admin.first_name }} {{stud3.admin.last_name }}">{{ stud3.admin.first_name }} {{stud3.admin.last_name }}</option>
+                      {% endfor %}
                     </select>
                   </div>
 
