admin update password

--- a/templates/admin/updateStaff.html
+++ b/templates/admin/updateStaff.html
@@ -76,6 +76,10 @@
                         <input id="email" type="email" name="email" value="{{ staff.admin.email }}" required data-msg="Please enter a valid email address" class="input-material">
                         <label for="email" class="label-material">Email Address</label>
                       </div>
+                      <div class="form-group-material">
+                        <input id="password" type="password" name="password"  class="input-material">
+                        <label for="password" class="label-material">Change Password</label>
+                      </div>
                         <input id="staff_id" type="hidden" name="staff_id" value="{{ staff.admin.id }}" class="input-material">
                       <div class="form-group-material">
                         <input id="address" type="text" name="address" value="{{ staff.address }}" required data-msg="Please enter Staff Address" class="input-material">
