--- a/templates/admin/updateStudent.html
+++ b/templates/admin/updateStudent.html
@@ -77,6 +77,10 @@
                         <label for="email" class="label-material">Email Address</label>
                       </div>
                       <div class="form-group-material">
+                        <input id="password" type="password" name="password"  class="input-material">
+                        <label for="password" class="label-material">Change Password</label>
+                      </div>
+                      <div class="form-group-material">
                         <input id="address" type="text" name="address" value="{{ student.address }}" required data-msg="Please enter Student Address" class="input-material">
                         <label for="address" class="label-material">Address</label>
                       </div>
