profile clcks update

--- a/templates/student/sidebar.html
+++ b/templates/student/sidebar.html
@@ -5,7 +5,7 @@
       <!-- Sidebar Header    -->
       <div class="sidenav-header d-flex align-items-center justify-content-center">
         <!-- User Info-->
-        <div class="sidenav-header-inner text-center"><a href="pages-profile.html"><img src="{{ student.profile_pic }}" alt="person" class="img-fluid rounded-circle"></a>
+        <div class="sidenav-header-inner text-center"><a href="#"><img src="{{ student.profile_pic }}" alt="person" class="img-fluid rounded-circle"></a>
           <h2 class="h5" style="color: white;">{{ user.first_name }} {{ user.last_name }} </h2><span style="color: white;">{{ user.username }}</span>
           <a href="{% url "UserProfileStudent" %}" class="btn btn-success btn-block">Update Profile</a>
         </div>
